fix memory horizontal scroll

--- a/src/components/memories/Memories.css
+++ b/src/components/memories/Memories.css
@@ -69,7 +69,7 @@
 .memory {
   background-color: #E0FFE3;
   margin: 20px 0;
-  width: 100%;
+  width: 99%;
   border: solid 1px #a4daaa;
 }
 
